# ion

./: .rustfmt.toml  Cargo.toml  README.md  flake.nix
crates/core/: Cargo.toml  build.rs
crates/core/src/: ast.rs  err.rs  grammar.lalrpop  lib.rs  llvm.rs  ty.rs  util.rs
crates/core/src/ast/: assign.rs  binexpr.rs  expr.rs  func.rs  ident.rs  lit.rs  mod.rs  path.rs  stmt.rs
crates/core/src/compiler/: assign.rs  binexpr.rs  expr.rs  func.rs  lit.rs  mod.rs  path.rs  stmt.rs
crates/core/src/snapshots/: ion_core__tests__invalid_token.snap  ion_core__tests__unexpected_eof.snap  ion_core__tests__unexpected_token_1.snap  ion_core__tests__unexpected_token_2.snap
crates/core/src/ty/: mod.rs
crates/core/tests/: general.rs
crates/core/tests/snapshots/: general__invalid_token.snap  general__unexpected_eof.snap  general__unexpected_token_2.snap
crates/ion/: Cargo.toml  build.rs
crates/ion/src/: cb.rs  err.rs  ion.lalrpop  lib.rs  prelude.rs  ty.rs  util.rs  val.rs
crates/ion/src/ast/: binexpr.rs  mod.rs  path.rs
crates/ion/src/compiler/: assign.rs  mod.rs  path.rs  stmt.rs
crates/ion/src/engine/: binexpr.rs  callback.rs  expr.rs  func.rs  mod.rs  path.rs  proto_name.rs  structs.rs
crates/ion/src/engine/_old/: assign.rs  lit.rs  stmt.rs
crates/ion/src/syntax/: block.rs  ctrl.rs  expr.rs  func.rs  item.rs  lexer.rs  mod.rs  stmt.rs  var.rs
crates/ion/src/ty/: mod.rs
crates/ion/tests/: general.rs
crates/ion/tests/snapshots/: general__unexpected_token_1.snap
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
