[package]
name = "ion-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
# parser
lalrpop-util = "0.19.8"
regex = "1.7"
# LLVM
# for what ever reason, only llvm11 ships with static libs on Arch 
inkwell = { version = "0.1.1", features = ["llvm11-0"] }
# SerDe
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
# err
thiserror = "1.0.39"
owo-colors = "3.5.0"
# macros
ion-macros = { path = "../macros" }

[build-dependencies]
# parser generator
lalrpop = "0.19.8"

[dev-dependencies]
insta = "1.28.0"
