[package]
name = "ion-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17"
# parser
lalrpop-util = "0.19"
regex = "1.7"
# LLVM
# for what ever reason, only llvm11 ships with static libs on Arch 
inkwell = { version = "0.1", features = ["llvm11-0"] }
# SerDe
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# err
thiserror = "1.0"
owo-colors = "3.5"
# macros
ion-macros = { path = "../macros" }

rand = "0.8"

[build-dependencies]
# parser generator
lalrpop = "0.19"

[dev-dependencies]
insta = "1.29"
