[package]
name = "ion"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17"
# parser
lalrpop-util = { version = "0.20", features = ["lexer"] }
# LLVM
inkwell = { version = "0.2", features = ["llvm16-0"] }
# SerDe
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# err
thiserror = "1.0"
owo-colors = "3.5"
# macros
ion-macros = { path = "../macros" }

arcstr = "1.1"
logos = "0.13"

rand = "0.8"
tracing = "0.1"

[build-dependencies]
# parser generator
lalrpop = "0.20"

[dev-dependencies]
insta = "1.29"
